# shellm

./: Cargo.toml  README.md
src/: .main.rs.swp  cli.rs  inference.rs  main.rs  temp.rs
